--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-detect-offline": "^2.4.0",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "use-sound": "^1.0.2"
